--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flip_card: ^0.7.0
   url_launcher: ^6.1.11
   super_drag_and_drop: ^0.8.12
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
