リモートからExcelファイルをダウンロード

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   super_drag_and_drop: ^0.8.12
   clipboard: ^0.1.3
   excel: ^4.0.3
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
