--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   assets:
     - assets/images/add-picture.png
     - assets/db/dev_kokotan_list.xlsx
+    - assets/images/humor_top.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
