--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   shared_preferences:
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,10 @@ flutter:
     - assets/images/add-picture.png
     - assets/db/dev_kokotan_list.xlsx
     - assets/images/humor_top.png
+    - assets/images/intro_1.png
+    - assets/images/intro_2.png
+    - assets/images/intro_3.png
+    - assets/images/intro_4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
