--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/images/add-picture.png
     - assets/db/dev_kokotan_list.xlsx
     - assets/images/humor_top.png
+    - assets/images/home_humor1.png
     - assets/images/intro_1.png
     - assets/images/intro_2.png
     - assets/images/intro_3.png
