--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences:
   introduction_screen: ^3.1.14
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
