--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/images/yoyuu.png
     - assets/images/bimyou.png
     - assets/images/oboenaosu.png
+    - assets/images/otsukare1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
