--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   clock: ^1.1.1
   fake_async: ^1.3.1
   fl_chart: ^0.68.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,14 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   test: ^1.24.9
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/appicon.png"
+
+flutter_native_splash:
+  image: "assets/images/sp_icon.png"
+  color: "FFFFFF"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
