--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,41 +1,19 @@
 name: kokotan
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+publish_to: "none"
+version: 1.0.0+5
 
 environment:
   sdk: ">=2.19.2 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.8+4
-  path_provider: ^2.1.1
+  path_provider:
   url_launcher: ^6.1.11
   excel: ^4.0.3
   http: ^1.2.1
@@ -48,16 +26,28 @@ dependencies:
   fl_chart: ^0.69.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
+  flutter_hooks: ^0.18.0
+  webview_flutter: ^4.0.7  
+  image_picker: ^0.8.7+4 
+  flutter_image_compress: ^1.1.0
+  vibration: ^1.7.3
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  desktop_drop: ^0.5.0
+  super_drag_and_drop: ^0.8.24
+  flutter_markdown: ^0.6.10
+  auto_size_text: ^3.0.0
+  share_plus: ^10.1.2
 
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.16
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
+
   flutter_lints: ^4.0.0
   test: ^1.24.9
 
@@ -69,22 +59,13 @@ flutter_icons:
 flutter_native_splash:
   image: "assets/images/sp_icon.png"
   color: "FFFFFF"
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/add-picture.png
     - assets/db/dev_kokotan_list.xlsx
-    - assets/images/humor_top.png
-    - assets/images/home_humor1.png
     - assets/images/intro_1.png
     - assets/images/intro_2.png
     - assets/images/intro_3.png
@@ -93,30 +74,50 @@ flutter:
     - assets/images/yoyuu.png
     - assets/images/bimyou.png
     - assets/images/oboenaosu.png
-    - assets/images/otsukare1.png
+    - assets/images/humor_otsukare_1.png
+    - assets/images/sp_icon.png
+    - assets/images/humor_column_1.png
+    - assets/images/humor_column_2.png
+    - assets/images/humor_column_3.png
+    - assets/images/humor_column_4.png
+    - assets/images/humor_column_5.png
+    - assets/images/humor_column_6.png
+    - assets/images/humor_home_1.png
+    - assets/images/humor_home_2.png
+    - assets/images/humor_home_3.png
+    - assets/images/humor_home_4.png
+    - assets/images/humor_home_5.png
+    - assets/images/humor_home_6.png
+    - assets/images/humor_home_7.png
+    - assets/images/humor_home_8.png
+    - assets/images/humor_home_9.png
+    - assets/images/humor_otsukare_1.png
+    - assets/images/humor_otsukare_2.png
+    - assets/images/humor_otsukare_3.png
+    - assets/images/humor_otsukare_4.png
+    - assets/images/humor_otsukare_5.png
+    - assets/images/humor_otsukare_6.png
+    - assets/images/humor_otsukare_7.png
+    - assets/images/humor_otsukare_8.png
+    - assets/images/humor_otsukare_9.png
+    - assets/images/humor_otsukare_10.png
+    - assets/images/humor_otsukare_11.png
+    - assets/images/humor_otsukare_12.png
+    - assets/images/humor_otsukare_13.png
+    - assets/images/humor_otsukare_14.png
+    - assets/images/humor_otsukare_15.png
+    - assets/images/humor_otsukare_16.png
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: ZenMaruGothic
+      fonts:
+        - asset: assets/fonts/ZenMaruGothic-Regular.ttf
+        - asset: assets/fonts/ZenMaruGothic-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/ZenMaruGothic-Light.ttf
+          weight: 300
+        - asset: assets/fonts/ZenMaruGothic-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/ZenMaruGothic-Black.ttf
+          weight: 900
